navbar mobile fast fertig

--- a/craft_sicherungWebsite/templates/_layouts/navbar-mobile.html
+++ b/craft_sicherungWebsite/templates/_layouts/navbar-mobile.html
@@ -1,299 +1,20 @@
 <div id="navbarHandy" style="display: none;">
 
-  <script>
-  $(document).ready(function() {
-    var counterMenu = 0;
-
-    $("#nav-icon").click(function() { //Nav-icon anklicken -> Logo ausblenden
-      if (counterMenu % 2 != 0) {
-        $("#hamburgerMobile").attr("src", " https://aufbau-website.de/craft/web/bilder/header-bilder/hamburger.svg") //zurück-pfeil einblenden, wenn in die nächste Ebene gegangen wird
-        $("#logoMobile").show();
-        $("#menuSchrift").show();
-      } else {
-        $("#logoMobile").hide();
-        $("#menuSchrift").hide();
-        $("#hamburgerMobile").attr("src", " https://aufbau-website.de/craft/web/bilder/header-bilder/schließen.png") //zurück-pfeil einblenden, wenn in die nächste Ebene gegangen wird
-      }
-      counterMenu++;
-    });
-    var counter = 0;
-
-    $("#A").click(function() { //Über uns anklicken -> die anderen ausblenden
-      if (counter % 2 != 0) {  //Normale Menüansicht, also erste Ebene
-        $("#homeBox").show();
-        $("#zweiteBox").show();
-        $("#dritteBox").show();
-        $("#vierteBox").show();
-        $("#blogBox").show();         $("#kontaktBox").show();
-        $("#pfeil1").attr("src", "  https://aufbau-website.de/craft/web/bilder/header-bilder/arrow-boxes-35px-right.png "); //zurück-pfeil einblenden, wenn in die nächste Ebene gegangen wird
-        $(".arrow").css("float", "right");    $(".arrow").css("padding-top", "0");         $(".arrow").css("padding-bottom", "0");
-        $("#linkUeberUns").show();
-        $("#ueberUnsSchrift").hide();
-
-      } else {
-        $("#homeBox").hide();
-        $("#zweiteBox").hide();
-        $("#dritteBox").hide();
-        $("#vierteBox").hide();
-        $("#blogBox").hide();         $("#kontaktBox").hide();
-        $("#pfeil1").attr("src", " https://aufbau-website.de/craft/web/bilder/header-bilder/arrow-boxes-35px-left.png ") //zurück-pfeil einblenden, wenn in die nächste Ebene gegangen wird
-        $(".arrow").css("float", "left");   $(".arrow").css("margin-bottom", "1rem");
-        $("#linkUeberUns").hide();
-        $("#ueberUnsSchrift").show();
-      }
-      counter++;
-    });
-
-    $("#B").click(function() { // Projekte anklicken --> die anderen ausblenden
-      if (counter % 2 != 0) {
-        $("#homeBox").show();
-        $("#ersteBox").show();
-        $("#dritteBox").show();
-        $("#vierteBox").show();
-        $("#blogBox").show();         $("#kontaktBox").show();
-        $("#pfeil2").attr("src", "  https://aufbau-website.de/craft/web/bilder/header-bilder/arrow-boxes-35px-right.png ") //zurück-pfeil einblenden, wenn in die nächste Ebene gegangen wird
-        $(".arrow").css("float", "right");    $(".arrow").css("padding-top", "0");         $(".arrow").css("padding-bottom", "0");
-        $("#linkProjekte").show();
-        $("#projekteSchrift").hide();
-      } else {
-        $("#homeBox").hide();
-        $("#ersteBox").hide();
-        $("#dritteBox").hide();
-        $("#vierteBox").hide();
-        $("#blogBox").hide();         $("#kontaktBox").hide();
-        $("#pfeil2").attr("src", " https://aufbau-website.de/craft/web/bilder/header-bilder/arrow-boxes-35px-left.png ") //zurück-pfeil einblenden, wenn in die nächste Ebene gegangen wird
-        $(".arrow").css("float", "left");   $(".arrow").css("margin-bottom", "1rem");
-        $("#linkProjekte").hide();
-        $("#projekteSchrift").show();
-      }
-      counter++;
-    });
-
-
-    $("#B-A").click(function() { // Programme anklicken --> Dorfentwicklung, Kinderpate sehen
-
-      $("#zweiteBox").hide(); //Zweite Box ganz verstecken
-      $("#projekteProgramme").show() //Neues div anzeigen
-
-    });
-
-    $("#B-A1").click(function() { // Programme anklicken --> Dorfentwicklung, Kinderpate sehen
-
-      $("#zweiteBox").show(); //Zweite Box wieder zeigen
-      $("#projekteProgramme").hide() //Neues div verstecken
-
-    });
-
-    $("#C").click(function() { // Spenden anklicken --> die anderen ausblenden
-      if (counter % 2 != 0) {
-        $("#homeBox").show();
-        $("#ersteBox").show();
-        $("#zweiteBox").show();
-        $("#vierteBox").show();
-        $("#blogBox").show();         $("#kontaktBox").show();
-        $("#pfeil3").attr("src", "  https://aufbau-website.de/craft/web/bilder/header-bilder/arrow-boxes-35px-right.png ") //zurück-pfeil einblenden, wenn in die nächste Ebene gegangen wird
-        $(".arrow").css("float", "right");    $(".arrow").css("padding-top", "0");         $(".arrow").css("padding-bottom", "0");
-        $("#linkSpenden").show();
-        $("#spendenSchrift").hide();
-
-      } else {
-        $("#homeBox").hide();
-        $("#ersteBox").hide();
-        $("#zweiteBox").hide();
-        $("#vierteBox").hide();
-        $("#blogBox").hide();         $("#kontaktBox").hide();
-        $("#pfeil3").attr("src", " https://aufbau-website.de/craft/web/bilder/header-bilder/arrow-boxes-35px-left.png ") //zurück-pfeil einblenden, wenn in die nächste Ebene gegangen wird
-        $(".arrow").css("float", "left");   $(".arrow").css("margin-bottom", "1rem");
-        $("#linkSpenden").hide();
-        $("#spendenSchrift").show();
-      }
-      counter++;
-    });
-
-
-    $("#D").click(function() { // Fuer sie anklicken --> die anderen ausblenden
-      if (counter % 2 != 0) {
-        $("#homeBox").show();
-        $("#ersteBox").show();
-        $("#zweiteBox").show();
-        $("#dritteBox").show();
-        $("#blogBox").show();         $("#kontaktBox").show();
-        $("#pfeil4").attr("src", "https://aufbau-website.de/craft/web/bilder/header-bilder/arrow-boxes-35px-right.png ") //zurück-pfeil einblenden, wenn in die nächste Ebene gegangen wird
-        $(".arrow").css("float", "right");    $(".arrow").css("padding-top", "0");         $(".arrow").css("padding-bottom", "0");
-        $("#linkFuerSie").show();
-        $("#fuerSieSchrift").hide();
-
-      } else {
-        $("#homeBox").hide();
-        $("#ersteBox").hide();
-        $("#zweiteBox").hide();
-        $("#dritteBox").hide();
-        $("#blogBox").hide();         $("#kontaktBox").hide();
-        $("#pfeil4").attr("src", "https://aufbau-website.de/craft/web/bilder/header-bilder/arrow-boxes-35px-left.png ") //zurück-pfeil einblenden, wenn in die nächste Ebene gegangen wird
-        $(".arrow").css("float", "left");   $(".arrow").css("margin-bottom", "1rem");
-        $("#linkFuerSie").hide();
-        $("#fuerSieSchrift").show();
-      }
-      counter++;
-    });
-
-    $("#D-A").click(function() { // Programme anklicken --> Dorfentwicklung, Kinderpate sehen
-      $("#vierteBox").hide(); //Zweite Box ganz verstecken
-      $("#fuerSieFreiwilligendienst").show() //Neues div anzeigen
-    });
-
-    $("#D-A1").click(function() { // Programme anklicken --> Dorfentwicklung, Kinderpate sehen
-      $("#vierteBox").show(); //Zweite Box wieder zeigen
-      $("#fuerSieFreiwilligendienst").hide() //Neues div verstecken
-    });
-
-    $("#D-B").click(function() { // Programme anklicken --> Dorfentwicklung, Kinderpate sehen
-      $("#vierteBox").hide(); //Zweite Box ganz verstecken
-      $("#fuerSieDaheim").show() //Neues div anzeigen
-    });
-
-    $("#D-B1").click(function() { // Programme anklicken --> Dorfentwicklung, Kinderpate sehen
-      $("#vierteBox").show(); //Zweite Box wieder zeigen
-      $("#fuerSieDaheim").hide() //Neues div verstecken
-    });
-
-  });
-</script>
-
-<style>
-
-.navbarMobilgeraet,
-.navbarMobilgeraet {
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  font-family: helvetica, sans-serif;
-  font-size: 16px;
-}
-.navbarMobilgeraet .multi-level,
-.navbarMobilgeraet .item ul,
-.navbarMobilgeraet .nav input[type="checkbox"] {
-  display: none;
-}
-.navbarMobilgeraet #menu:checked ~ .multi-level,
-.navbarMobilgeraet .item input:checked ~ ul {
-  display: block;
-}
-.navbarMobilgeraet .arrow, .pfeilUnterebene, .pfeilErsteUnterebene { /*Anordnen der Pfeile */
-  width: 20px;
-  height: 20px;
-  vertical-align: middle;
-  float: left;
-  z-index: 0;
-  transform: translateY(50%); /* Die Pfeil in der ersten Ebene richtig setzen */
-}
-
-.navbarMobilgeraet .pfeilUnterebene { /*Anordnen der Unterpfeil */
-  margin-left: 2rem;
-  margin-bottom: 1rem;
-}
-
-.navbarMobilgeraet .pfeilErsteUnterebene {
-  float: right;
-}
-
-.navbarMobilgeraet .item input + .arrow {
-  transform: rotate(-90deg);
-  transition: 0.1s;
-}
-.navbarMobilgeraet .item input:checked + .arrow {
-  transform: rotate(0deg);
-  transition: 0.1s;
-}
-.navbarMobilgeraet label:hover {
-  cursor: pointer;
-}
-.navbarMobilgeraet label {
-  display: inline;
-  z-index: 3;
-  position: relative;
-}
-.navbarMobilgeraet .nav {
-  width: 100%;
-  overflow-x: hidden;
-  justify-content: space-between; /*Extrem wichtiges Flexbox-Design, mit dem man beide Items in der Leiste gleichmäßig verteilt anzeigt */
-}
-.navbarMobilgeraet #nav-icon { /*Hamburger-Menu-Icon */
-  padding-left: .5rem;
-  padding-right: 2.5rem;
-}
-.navbarMobilgeraet .nav ul,
-.navbarMobilgeraet .nav li {
-  line-height: 45px;
-  margin: 0;
-  list-style: none;
-  text-decoration: none;
-  color: #9b9b9b;
-  font-weight: 100;
-  width: 100%;
-}
-.navbarMobilgeraet .item ul {
-  padding: 0 0.25em;
-}
-.navbarMobilgeraet .item { /*Padding der Items setzen*/
-  padding: 0 2rem;
-}
-
-.navbarMobilgeraet .nav a {
-  line-height: 45px;
-  margin: 0;
-  padding: 0 4em;
-  padding-left: 0;
-  list-style: none;
-  text-decoration: none;
-  color: #333333;
-  font-family: 'source_sans_probold';
-}
-
-.navbarMobilgeraet hr {
-  background: transparent;
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
-  border-top-width: 1px;
-  border-top-color: #e3d7cb;
-}
-
-.navbarMobilgeraet .nichtklickbareUeberschriften {
-  line-height: 45px;
-  color: #9b9b9b;
-  font-family: 'source_sans_prolight';
-}
-#fuerSieFreiwilligendienst ul, /*Padding der beiden untermenus setzen */
-#fuerSie ul,
-#fuerSieDaheim ul,
-#projekteProgramme ul {
-  padding: 0 2rem;"
-}
-
-#hamburgerMobile {
-  max-width: 40px;
-  max-height: 40px;
-  margin-top: .4rem;
-  padding-bottom: .65rem;"
-}
-
-}
-
-
-</style>
+{% include '_layouts/codeschnipsel/navbarmobile' %}
 
 <div class="navbarMobilgeraet">
 
-<div class="nav" style="position: fixed; top: 0; overflow: hidden; z-index: 1; background-color: #f8f5f2;">
+  <div style="background-color: #f8f5f2; position: fixed; top: 0; height: 5rem; width: 100%; z-index: 1;" id="grauerBalken"> </div>
+
+<div class="nav" style="position: fixed; top: 0; overflow: hidden; z-index: 1; background-color: transparent;">
   {% set entry = craft.entries.section('spendenfelderUndSo').slug('navbar').one() %}
 
-
   <a href="https://aufbau-website.de/craft/web/">
-    <img style="display: inline; margin-left: 2.5rem;" src="{{ craft.assets.filename('chance-logo-rgb.png').one().getUrl() }}" id="logoMobile" alt="Logo" width="80" height="60">
+    <img style="display: inline; margin-left: 2.5rem; width: 101.5px; height: 90px;" src="{{ craft.assets.filename('chance-logo-rgb.png').one().getUrl() }}" id="logoMobile" alt="Logo">
   </a>
 
   <input type="checkbox" id="menu"/> <!-- Hamburger Menu, das nach unten klappt -->
-  <div id="copy" style="padding-top: .5rem;"> <span id="menuSchrift">Menü</span>
+  <div id="copy" style="padding: 1rem; font-size: 18px; display: flex; justify-content: center;"> <span style="line-height: 30px;" id="menuSchrift">Menü</span>
   <label for="menu" id="nav-icon"><img id="hamburgerMobile" src=" {{ entry.bild3.one().url }} "> </label>
   </div>
 
