--- a/craft_sicherungWebsite/templates/index.html
+++ b/craft_sicherungWebsite/templates/index.html
@@ -21,7 +21,7 @@
   </div>
 </div>
 
-<img class="img-fluid mx-auto d-block" style="padding-bottom: 0;" src=" {{ craft.assets.filename('chance-home-header.jpg').one().getUrl() }} " >
+<img class="img-fluid mx-auto d-block" style="padding-bottom: 0; width: 100%;" src=" {{ craft.assets.filename('chance-home-header.jpg').one().getUrl() }} " >
 
   <div class="container achterspaltenlayout" id="video">
     <div class="embed-responsive embed-responsive-16by9 videoStart">
