--- a/craft_sicherungWebsite/templates/_layouts/footer.html
+++ b/craft_sicherungWebsite/templates/_layouts/footer.html
@@ -3,8 +3,8 @@
 <div class="container" id="footer">
   <div class="row">
     <div class="col-lg-8 col-md-0">  </div>
-    <div class="col-lg-4 col-md-11">
-      <a href="https://www.mein-regenwald.de" class="btn btn-success">Der Chance-Regenwald <br> <strong>https://www.mein-regenwald.de</strong></a>
+    <div class="col-lg-4 col-md-11" style="color: white;">
+      <a href="https://www.mein-regenwald.de" class="btn btn-success">Der Chance-Regenwald <br> <strong>www.mein-regenwald.de</strong></a>
     </div>
   </div>
 </div>
@@ -28,6 +28,7 @@
     input[type="email"]:-moz-placeholder { /* Firefox 18- */
       color: white !important;
     }
+
 
     input[type="email"]::-moz-placeholder {  /* Firefox 19+ */
       color: white !important;
