--- a/craft_sicherungWebsite/templates/blog/_category/index.html
+++ b/craft_sicherungWebsite/templates/blog/_category/index.html
@@ -45,12 +45,17 @@
         <a href="{{ 'https://aufbau-website.de/craft/web/blog/' ~ entry.slug }}">
         <img class="img-fluid"src=" {% if entry.bild.one() is not null %} {{ entry.bild.one().url }} {% endif %}" alt="blogbild" style="padding-bottom: 1rem;">
         </a>
-        <div id="info"> Veröffentlicht am {{ entry.postDate | date("M d, Y") }} - in <a href="{{ entry.blogKategorie.one().url }}">{{ entry.blogKategorie.one().title }}</a></div>
+        <div id="info"> Veröffentlicht am {{ entry.postDate | date("M d, Y") }} - in
+          {% set kategorien = entry.blogKategorie.all() %} {% set counter = 0 %}
+            {% for kategorie in kategorien %} {% set counter = counter + 1 %} {% if counter > 1 %} und {% endif %}
+             <a href="{{ kategorie.url }}">{{ kategorie.title }} </a>
+            {% endfor %}
+        </div>
         <a href="{{ 'https://aufbau-website.de/craft/web/blog/' ~ entry.slug }}">
         <h2 style="padding-bottom: 0;"> {{ entry.title}}</h2>
         </a>
         <div id="copy" style="padding-top: 0; padding-bottom: 5rem;"> {{ entry.anleser }}
-        <a href="{{ 'https://aufbau-website.de/craft/web/blog/' ~ entry.slug }}"> Weiterlesen</a> </div>
+        <a href="{{ 'https://aufbau-website.de/craft/web/blog/' ~ entry.slug }}"> Weiterlesen > </a> </div>
         {% set counter = counter + 1 %}
         {% endfor %}
       </div> <!-- Anzeige aller der zu der Kategorie gehörigen Einträge -->
@@ -90,7 +95,7 @@
 
         <div id="copy" style="background-color: #f8f5f2; padding: 1.5rem; margin-bottom: 1.5rem;">
           <p> <strong> Letzte Beiträge </strong> </p>
-          {% set entries = craft.entries.relatedTo(category).limit(5) %}
+          {% set entries = craft.entries.section('blog').level('1').limit(5) %}
           {% for entry in entries %}
           <a href="{{ 'https://aufbau-website.de/craft/web/blog/' ~ entry.slug }}"> {{ entry.title }}</a>
           <hr style="margin-top: .25rem; margin-bottom: .25rem;">
