--- a/craft_sicherungWebsite/templates/blog/index.html
+++ b/craft_sicherungWebsite/templates/blog/index.html
@@ -45,16 +45,20 @@
       <div class="col-sm-8">
         {% for entry in entries %}
         <a href="{{ 'https://aufbau-website.de/craft/web/blog/' ~ entry.slug }}">
-        <img class="img-fluid" src="{% if entry.bild.one() is not null %} {{ entry.bild.one().url }} {% endif %}" alt="blogbild" style="padding-bottom: 1rem;">
+        <img class="img-fluid" src="{% if entry.bild.one() is not null %} {{ entry.bild.one().url }} {% endif %}" alt="blogbild" style="padding-bottom: 2rem;">
         </a>
-        <div id="info"> Veröffentlicht am {{ entry.postDate | date("d M Y") }} - {%if entry.blogKategorie.one() is not null %} in <a href="{{ entry.blogKategorie.one().url }}">{{ entry.blogKategorie.one().title }}</a> {% endif %}
-        {%if entry.blogKategorie.inReverse().one().title != entry.blogKategorie.one().title %} und <a href="{{ entry.blogKategorie.inReverse().one().url }}">{{ entry.blogKategorie.inReverse().one().title }}</a> {% endif %}</div>
+        <div id="info" style="padding-bottom: 1rem;"> Veröffentlicht am {{ entry.postDate | date("d M Y") }} - in
+        {% set kategorien = entry.blogKategorie.all() %} {% set counter = 0 %}
+        {% for kategorie in kategorien %} {% set counter = counter + 1 %} {% if counter > 1 %} und {% endif %}
+         <a href="{{ kategorie.url }}">{{ kategorie.title }} </a>
+        {% endfor %}
+        </div>
         <!-- Mit der oberen Zeile wird die Kategorie des Artikels abgerufen und angezeigt und sofort klickbar -->
         <a href="{{ 'https://aufbau-website.de/craft/web/blog/' ~ entry.slug }}">
-        <h2 style="padding-bottom: 0;"> {{ entry.title}}</h2>
+        <h2 style="padding-bottom: 1rem;"> {{ entry.title}}</h2>
         </a>
         <div id="copy" style="padding-top: 0; padding-bottom: 5rem;"> {{ entry.anleser }}
-        <a href="{{ 'https://aufbau-website.de/craft/web/blog/' ~ entry.slug }} "> Weiterlesen</a>
+        <a href="{{ 'https://aufbau-website.de/craft/web/blog/' ~ entry.slug }} "> Weiterlesen > </a>
         </div>
         {% set counter = counter + 1 %}
         {% endfor %}
@@ -82,7 +86,7 @@ function mehrLadenAjax() {
     $("#div1").append("<a href=" + link + "> <img class=\"img-fluid\" style=\"padding-bottom: 1rem;\" src=" + eintraege[i].bild + "> </img> </a>");
     $("#div1").append("<div id=\"info\"> Veröffentlicht am " + eintraege[i].datum + " - in <a href=\"" + eintraege[i].kategorieUrl + "\">" + eintraege[i].kategorie + "</a></div>");
     $("#div1").append("<a href=" + link + "> <h2 style=\"padding-bottom: 0;\">" + eintraege[i].title + "</h2> </a>");
-    $("#div1").append("<div style=\"padding-bottom: 5rem;\" id=\"copy\">" + eintraege[i].anleser + "<a href=\"https://aufbau-website.de/craft/web/blog/" + eintraege[i].slug +"\"> Weiterlesen</a> </div>");
+    $("#div1").append("<div style=\"padding-bottom: 5rem;\" id=\"copy\">" + eintraege[i].anleser + "<a href=\"https://aufbau-website.de/craft/web/blog/" + eintraege[i].slug +"\"> Weiterlesen > </a> </div>");
     //$("#div1").html("<img src=" + eintraege[i].bild + "> </img>");
 }
 for (i = 0; i < durchlaeufe; i++) { //Loeschen der ersten drei angezeigten Elemente
