--- a/craft_sicherungWebsite/templates/projekte/index.html
+++ b/craft_sicherungWebsite/templates/projekte/index.html
@@ -82,7 +82,7 @@
         </div>
       </div>
     </div>
-    <img class="img-fluid mx-auto d-block" style="padding-bottom: 0;" src=" {{ craft.assets.filename('chance-projekte-programme.jpg').one().getUrl() }} ">
+    <img class="img-fluid mx-auto d-block" style="padding-bottom: 0; width: 100%;" src=" {{ craft.assets.filename('chance-projekte-programme.jpg').one().getUrl() }} ">
   </div>
 
   {% set entry = craft.entries.section('fuerSie').slug('fuelleintrag').one() %}
