--- a/craft_sicherungWebsite/templates/_layouts/navbar-mobile.html
+++ b/craft_sicherungWebsite/templates/_layouts/navbar-mobile.html
@@ -14,11 +14,11 @@
   </a>
 
   <input type="checkbox" id="menu"/> <!-- Hamburger Menu, das nach unten klappt -->
-  <div id="copy" style="padding: 1rem; font-size: 18px; display: flex; justify-content: center;"> <span style="line-height: 30px;" id="menuSchrift">Menü</span>
+  <div id="copy" style="padding: 1rem; font-size: 18px; display: flex; justify-content: center;"> <span style="line-height: 32px;" id="menuSchrift">Menü</span>
   <label for="menu" id="nav-icon"><img id="hamburgerMobile" src=" {{ entry.bild3.one().url }} "> </label>
   </div>
 
-  <div class="multi-level" style="width: 100vw; height: 100vh;">
+  <div class="multi-level" style="width: 100vw; height: 100vh; padding-right: 2rem;">
 
     <div class="item" id="homeBox">
       <a href="https://aufbau-website.de/craft/web/" id="naviUeberschrift" style="padding-right: 20%; padding-top: 10%;">HOME</a>
@@ -43,6 +43,8 @@
         <li > <a href="https://aufbau-Website.de/craft/web/ueberUns/verein.html"> Der Verein</a> </li> <hr>
 
         <li > <a href="https://aufbau-Website.de/craft/web/ueberUns/transparenz.html"> Transparenz</a> </li> <hr>
+
+        <li > <a href="https://aufbau-Website.de/craft/web/ueberUns/empfehlungen.html"> Empfehlungen</a> </li>
       </ul>
       <hr> <!-- Horizontal Ruler für Abstände -->
     </div>
@@ -66,7 +68,7 @@
         </li> <hr>
         <li> <a href="https://aufbau-Website.de/craft/web/projekte/themen.html"> Themen</a> </li> <hr>
         <li> <a href="https://aufbau-Website.de/craft/web/projekte/erfahrungsberichte.html">Erfahrungsberichte</a>  </li> <hr>
-        <li> <a href="https://aufbau-Website.de/craft/web/projekte/projektberichte.html">Projektberichte</a>  </li> <hr>
+        <li> <a href="https://aufbau-Website.de/craft/web/projekte/projektberichte.html">Projektberichte</a>  </li>
       </ul>
       <hr> <!-- Horizontal Ruler für Abstände -->
     </div>
@@ -95,7 +97,7 @@
         <li> <a href="https://aufbau-Website.de/craft/web/spenden/jetztspenden.html">Jetzt Spenden</a></li> <hr>
         <li> <a href="https://aufbau-website.de/craft/web/spenden/patewerden.html">Pate werden</a></li> <hr>
         <li> <a href="https://aufbau-Website.de/craft/web/spenden/schenkenundspenden.html">Schenken und Spenden</a></li> <hr>
-        <li> <a href="https://aufbau-Website.de/craft/web/spenden/einkaufenundspenden.html">Einkaufen und Spenden</a></li> <hr>
+        <li> <a href="https://aufbau-Website.de/craft/web/spenden/einkaufenundspenden.html">Einkaufen und Spenden</a></li>
       </ul>
         <hr> <!-- Horizontal Ruler für Abstände -->
     </div> <!-- Dritte Box (Spenden) - Ende -->
@@ -126,7 +128,7 @@
         </li> <hr>
         <li> <a href="https://aufbau-website.de/craft/web/fuerSie/presse">Presse und Downloads</a> </li> <hr>
         <li> <a href="https://aufbau-Website.de/craft/web/fuerSie/literaturtipps.html">Literaturtipps</a> </li> <hr>
-        <li> <a href="https://aufbau-Website.de/craft/web/fuerSie/zitate.html">Zitate</a> </li> <hr>
+        <li> <a href="https://aufbau-Website.de/craft/web/fuerSie/zitate.html">Zitate</a> </li>
       </ul>
       <hr> <!-- Horizontal Ruler für Abstände -->
     </div>
