--- a/craft_sicherungWebsite/templates/projekte/erfahrungsberichte.html
+++ b/craft_sicherungWebsite/templates/projekte/erfahrungsberichte.html
@@ -84,7 +84,7 @@ function erfahrungenAnpassen () {
   <div class="card-columns">
 
         {% for entry in entries %}
-        <div class="card">
+        <div class="card" style="border:5px solid #f8f5f2; border-radius: 0;">
               <div class="row">
                 <div class="col-4" style="text-align: center; white-space: nowrap;">
                    <span class="helper" style="display: inline-block; height: 100%; vertical-align: middle;"></span>
