--- a/craft_sicherungWebsite/templates/spenden/index.html
+++ b/craft_sicherungWebsite/templates/spenden/index.html
@@ -8,7 +8,7 @@
 
 {% block headerbildPosition1 %}
 
-<div class="container-fluid no-padding" style="padding-top: 4rem; background-color: #ee6e2d;">
+<div class="container-fluid no-padding" style="padding-top: 10rem; background-color: #ee6e2d;">
 
 </div>
 
@@ -31,6 +31,16 @@ h3 p {
   margin-bottom: 0;
 }
 .navbar-light .navbar-nav .nav-link.active { color: #0062ae; }
+
+/*Einfärben der mobilen Navbar */
+#grauerBalken {
+  background-color: #ed6e2c !important;
+}
+
+.navbarMobilgeraet .nav li, #menuSchrift, .navbarMobilgeraet .nav a {
+  color: white;
+}
+
 </style>
 
 
