--- a/craft_sicherungWebsite/templates/ueberUns/empfehlungen.html
+++ b/craft_sicherungWebsite/templates/ueberUns/empfehlungen.html
@@ -35,7 +35,7 @@
   {# If there are any entries, loop through them #}
   {% if entries | length %}
       {% for entry in entries %}
-      <div class="card bg-white" style="border:10px solid #f8f5f2; ;">
+      <div class="card bg-white" style="border:10px solid #f8f5f2;">
         <div class="wrapper" style="background-color: #f8f5f2; max-height: 95px;">
           <a href="{{ 'https://aufbau-website.de/craft/web/ueber-uns/empfehlung/' ~ entry.slug }}">
         <img class="card-img-top rounded-circle" style="border:8px solid #f8f5f2; max-height: 160px; max-width: 160px; display: block; margin-left: auto; margin-right: auto;  width: 50;"
@@ -65,18 +65,20 @@
   {% set entries = craft.entries.section('ueberUns').slug('empfehlungen').one().children().all() %}
 
       {% for entry in entries %}
-      <div class="card">
+      <div class="card" style="border:5px solid #f8f5f2; border-radius: 0;">
             <div class="row">
               <div class="col-4" style="text-align: center; white-space: nowrap;">
                  <span class="helper" style="display: inline-block; height: 100%; vertical-align: middle;"></span>
+                  <a href="{{ 'https://aufbau-website.de/craft/web/ueber-uns/empfehlung/' ~ entry.slug }}">
                   <img class="rounded-circle w-75" style="margin-left: 12.5%; vertical-align: middle; max-height: 100px;" src=" {% if entry.bild.one() is not null %} {{ entry.bild.one().url }} {% endif %}">
+                  </a>
                 </div>
                 <div class="col-8">
                   <div class="card-body" style="padding: 0; padding-right: 1rem;">
                     <p class="card-text">
                       <h4 style="margin: 0;"> {{ entry.title }} </h4>
                       <div id="copy">
-                        <a href="{{ 'https://aufbau-website.de/craft/web/ueber-uns/empfehlung/' ~ entry.slug }}"> Mehr erfahren</a>
+                        <a href="{{ 'https://aufbau-website.de/craft/web/ueber-uns/empfehlung/' ~ entry.slug }}"> Mehr erfahren > </a>
                       </div>
                     </p>
                   </div>
